@@ -493,3 +493,5 @@
 	* apps/netutils/telnetd/telnetd_driver: Was stuck in a loop if
 	  recv[from]() ever returned a value <= 0.
 	* apps/examples/nettest and poll:  Complete Kconfig files.
+	* apps/examples/ostest/waitpid.c:  Need to use WEXITSTATUS()
+	  to decode the correct exit status.
